--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML page</title>
+    <style type="text/css">
+      body{
+        text-align: center;
+      }
+      p {
+          font-size: 20px;
+      }
+    </style>
 </head>
-<body style="margin: 50px; text-align: center;">
+<body>
   <header>
     <h1>Hello, I'm Yuliia and I am a photographer</h1>
     <img src="img/yulia.jpg" alt="Yuliia Tolkunova">
@@ -15,8 +23,8 @@
     <p>Hi! I'm Julia and I don't realize my life without a photo. I am 20 years old girl and have been engaged with this work for over 5 years. I live in Lviv and take photos all over Ukraine and abroad. Based in Lviv, but sometimes I work in Czech Republic, Prague. If you want to save moments and emotions from your life - contact me!</p>
     <section>
       <h2> My portfolio</h2>
-      <img src="img/1.jpg" alt="Img 1">
-      <img src="img/2.jpg" alt="Img 2">
+      <img src="img/1.jpg" alt="Img 1"><br>
+      <img src="img/2.jpg" alt="Img 2"><br>
       <img src="img/3.jpg" alt="Img 3">
       <img src="img/5.jpg" alt="Img 4">
       <img src="img/7.jpg" alt="Img 5">
